--- a/src/app/components/media-player/media-player.component.html
+++ b/src/app/components/media-player/media-player.component.html
@@ -1,260 +1,11 @@
-<div [class]="footer() ? 'media-player-footer' : 'media-player'"
-  [class.fullscreen-mode]="layout.fullscreenMediaPlayer()">
-  @if (!footer()) {
-  <img class="media-player-icon" src="icons/icon.svg" width="16" height="16" alt="Nostria" />
-
-  <div class="media-player-controls">
-    @if (media.hasQueue()) {
-    @if (media.current?.type === 'Podcast') {
-    <button (click)="media.rate()" mat-icon-button>
-      <mat-icon>speed</mat-icon>
-    </button>
-    }
-
-    @if (media.current?.type === 'Podcast') {
-    <button (click)="media.rewind(10)" class="hide-small" mat-icon-button>
-      <mat-icon>replay_10</mat-icon>
-    </button>
-    }
-
-    @if (!media.current?.isLiveStream) {
-    <button [disabled]="!media.canPrevious()" (click)="media.previous()" mat-icon-button>
-      <mat-icon>skip_previous</mat-icon>
-    </button>
-    }
-
-    @if (media.paused) {
-    <button (click)="media.resume()" mat-icon-button>
-      <mat-icon>play_arrow</mat-icon>
-    </button>
-    } @else {
-    <button (click)="media.pause()" mat-icon-button>
-      <mat-icon>pause</mat-icon>
-    </button>
-    }
-
-    @if (!media.current?.isLiveStream) {
-    <button [disabled]="!media.canNext()" (click)="media.next()" mat-icon-button>
-      <mat-icon>skip_next</mat-icon>
-    </button>
-    }
-
-    @if (media.current?.type === 'Podcast') {
-    <button (click)="media.forward(10)" class="hide-small" mat-icon-button>
-      <mat-icon>forward_10</mat-icon>
-    </button>
-    }
-    }
-
-    <button (click)="media.pause()" routerLink="/media-queue" mat-icon-button>
-      <mat-icon>queue_music</mat-icon>
-    </button>
-  </div>
-  } @else {
-  <div class="media-player-controls-footer">
-    @if (!media.videoMode()) {
-    <div class="media-info">
-      <img class="music-album" [src]="media.current?.artwork" alt="Album artwork" />
-      <div class="media-info-text hide-small">
-        <div class="music-title">{{ media.current?.title }}</div>
-        <div class="music-artist">{{ media.current?.artist }}</div>
-      </div>
-    </div>
-    }
-
-    @if (media.current?.type === 'YouTube') {
-    <div class="media-info">
-      @if (media.youtubeUrl()) {
-      <iframe id="ytplayer" class="youtube-video" type="text/html" [src]="media.youtubeUrl()" frameborder="0"
-        allowfullscreen allow="autoplay" title="YouTube video player"></iframe>
-      }
-    </div>
-    }
-
-    @if (media.current?.type === 'Video' || media.current?.type === 'HLS') {
-    <div class="media-info" [class.fullscreen-video-container]="layout.fullscreenMediaPlayer()">
-      <!-- Video player and info section -->
-      <div class="video-content-wrapper">
-        <div class="video-player-wrapper">
-          @if (media.current?.type === 'HLS') {
-          <video #videoElement class="event-video" [class.fullscreen]="media.isFullscreen()" controls autoplay
-            preload="metadata" (loadeddata)="registerVideoElement()" (canplay)="registerVideoElement()"
-            (ended)="onVideoEnded()" (error)="onVideoError($event)"></video>
-          } @else if (media.videoUrl()) {
-          <video #videoElement class="event-video" [class.fullscreen]="media.isFullscreen()" [src]="media.videoUrl()"
-            controls autoplay preload="metadata" (loadeddata)="registerVideoElement()"
-            (canplay)="registerVideoElement()" (ended)="onVideoEnded()" (error)="onVideoError($event)"></video>
-          }
-        </div>
-
-        <!-- Stream info bar for fullscreen live streams -->
-        @let liveEvent = media.current?.liveEventData;
-        @if (layout.fullscreenMediaPlayer() && media.current?.isLiveStream && liveEvent) {
-        <app-stream-info-bar [liveEvent]="liveEvent" />
-        }
-      </div>
-
-      <!-- Live stream sidebar (chat + participants) for fullscreen -->
-      @if (layout.fullscreenMediaPlayer() && media.current?.isLiveStream) {
-      <div class="live-stream-sidebar" #chatSidebar [class.hidden]="!chatVisible">
-        <app-live-chat [liveEvent]="liveEvent" #liveChat />
-      </div>
-      }
-
-      <!-- Video controls overlay (only in non-fullscreen) -->
-      @if (!layout.fullscreenMediaPlayer()) {
-      <div class="video-controls">
-        <button matTooltip="Open video in window" (click)="media.pictureInPicture()" mat-icon-button>
-          <mat-icon>picture_in_picture_alt</mat-icon>
-        </button>
-        <button matTooltip="Open in fullscreen" (click)="media.fullscreen()" mat-icon-button>
-          <mat-icon>tv</mat-icon>
-        </button>
-      </div>
-      }
-    </div>
-    }
-
-    <div class="media-controls" [class.compact-controls]="layout.fullscreenMediaPlayer()">
-      <div class="media-controls-container">
-        @if (media.current?.type === 'Podcast') {
-        <button matTooltip="Change speed" (click)="media.rate()" mat-icon-button>
-          <mat-icon>speed</mat-icon>
-        </button>
-        }
-
-        @if (media.current?.type === 'Podcast') {
-        <button matTooltip="Skip back 10 seconds" class="hide-small" (click)="media.rewind(10)" mat-icon-button>
-          <mat-icon>replay_10</mat-icon>
-        </button>
-        }
-
-        @if (!media.current?.isLiveStream) {
-        <button matTooltip="Previous" [disabled]="!media.canPrevious()" (click)="media.previous()" mat-icon-button>
-          <mat-icon>skip_previous</mat-icon>
-        </button>
-        }
-
-        @if (media.paused) {
-        <button matTooltip="Play" (click)="media.resume()" mat-icon-button>
-          <mat-icon>play_arrow</mat-icon>
-        </button>
-        }
-
-        @if (!media.paused) {
-        <button matTooltip="Pause" (click)="media.pause()" mat-icon-button>
-          <mat-icon>pause</mat-icon>
-        </button>
-        }
-
-        @if (!media.current?.isLiveStream) {
-        <button matTooltip="Next" [disabled]="!media.canNext()" (click)="media.next()" mat-icon-button>
-          <mat-icon>skip_next</mat-icon>
-        </button>
-        }
-
-        @if (media.current?.type === 'Podcast') {
-        <button matTooltip="Skip forward 10 seconds" class="hide-small" (click)="media.forward(10)" mat-icon-button>
-          <mat-icon>forward_10</mat-icon>
-        </button>
-        }
-
-        @if (media.videoMode()) {
-        <div class="media-audio-inline">
-          @if (layout.fullscreenMediaPlayer() && media.current?.isLiveStream) {
-          <button [matTooltip]="chatVisible ? 'Hide chat' : 'Show chat'" (click)="toggleChatVisibility()"
-            mat-icon-button>
-            <mat-icon>{{chatVisible ? 'chat' : 'chat_bubble_outline'}}</mat-icon>
-          </button>
-          }
-
-          <button matTooltip="Queue" routerLink="/media-queue" class="hide-small" mat-icon-button>
-            <mat-icon>queue_music</mat-icon>
-          </button>
-
-          @if (layout.fullscreenMediaPlayer() && media.current?.isLiveStream) {
-          <button matTooltip="More options" [matMenuTriggerFor]="liveStreamMenu" mat-icon-button>
-            <mat-icon>more_vert</mat-icon>
-          </button>
-          }
-
-          <button matTooltip="Fullscreen Media Player" (click)="toggleFullscreen()" mat-icon-button>
-            @if (!layout.fullscreenMediaPlayer()) {
-            <mat-icon>open_in_full</mat-icon>
-            } @else {
-            <mat-icon>close_fullscreen</mat-icon>
-            }
-          </button>
-
-          <button matTooltip="Exit Media Player" (click)="media.exit()" mat-icon-button>
-            <mat-icon>close</mat-icon>
-          </button>
-        </div>
-        }
-      </div>
-      @if (!media.videoMode()) {
-      <div class="media-timeline">
-        <div class="media-timeline-1 hide-small">
-          {{ media.time | time }}
-        </div>
-        <div class="media-timeline-2">
-          <mat-slider class="media-slider" discrete [displayWith]="formatLabel" [max]="media.duration" [min]="0"
-            [step]="1" aria-label="Media timeline">
-            <input matSliderThumb [(ngModel)]="media.time" aria-label="Current time" />
-          </mat-slider>
-        </div>
-        <div class="media-timeline-3 hide-small">
-          {{ media.duration | time }}
-        </div>
-      </div>
-      }
-    </div>
-
-    @if (!media.videoMode()) {
-    <div class="media-audio">
-      <div class="media-audio-container">
-        @if (media.muted) {
-        <button matTooltip="Mute" class="hide-small" mat-icon-button (click)="media.mute()">
-          <mat-icon>volume_off</mat-icon>
-        </button>
-        }
-
-        @if (!media.muted) {
-        <button matTooltip="Unmute" class="hide-small" mat-icon-button (click)="media.mute()">
-          <mat-icon>volume_up</mat-icon>
-        </button>
-        }
-
-        <button matTooltip="Queue" routerLink="/media-queue" class="hide-small" mat-icon-button>
-          <mat-icon>queue_music</mat-icon>
-        </button>
-
-        <button matTooltip="Fullscreen Media Player" (click)="toggleFullscreen()" class="hide-small" mat-icon-button>
-          @if (!layout.fullscreenMediaPlayer()) {
-          <mat-icon>open_in_full</mat-icon>
-          } @else {
-          <mat-icon>close_fullscreen</mat-icon>
-          }
-        </button>
-
-        <button matTooltip="Exit Media Player" (click)="media.exit()" mat-icon-button>
-          <mat-icon>close</mat-icon>
-        </button>
-      </div>
-    </div>
-    }
-  </div>
-  }
-</div>
-
-<!-- Context menu for live streams -->
-<mat-menu #liveStreamMenu="matMenu">
-  <button mat-menu-item (click)="copyEventData()">
-    <mat-icon>code</mat-icon>
-    <span>Copy Event Data</span>
-  </button>
-  <button mat-menu-item (click)="copyEventUrl()">
-    <mat-icon>link</mat-icon>
-    <span>Copy Event URL</span>
-  </button>
-</mat-menu>
+@if (media.hasQueue()) {
+@if (isLiveStream()) {
+<app-live-stream-player [footer]="footer()" />
+} @else if (isYouTube()) {
+<app-youtube-player [footer]="footer()" />
+} @else if (isVideo()) {
+<app-video-player [footer]="footer()" />
+} @else if (isAudio()) {
+<app-audio-player [footer]="footer()" />
+}
+}
