--- a/src/app/components/media-player/live-stream-player/live-stream-player.component.scss
+++ b/src/app/components/media-player/live-stream-player/live-stream-player.component.scss
@@ -36,9 +36,11 @@
   display: flex;
   align-items: center;
   width: 100%;
+  max-width: 100%;
   height: 100%;
   gap: 16px;
   background: var(--mat-sys-surface-container);
+  overflow: hidden;
 }
 
 .video-preview {
