--- a/src/app/pages/notifications/notifications.component.scss
+++ b/src/app/pages/notifications/notifications.component.scss
@@ -195,11 +195,8 @@
 .notification-list {
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 320px); // Account for header, tabs, and padding
-  min-height: 400px;
   width: 100%;
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow: visible;
 }
 
 // System notification items - completely separate from activity items
