--- a/src/app/app.html
+++ b/src/app/app.html
@@ -477,6 +477,13 @@
   </mat-sidenav-container>
   }
 
+  <!-- Fullscreen media player overlay -->
+  @if (layout.fullscreenMediaPlayer() && media.hasQueue()) {
+  <div class="fullscreen-media-overlay">
+    <app-media-player [footer]="false"></app-media-player>
+  </div>
+  }
+
   <!-- Mobile navigation footer - now outside of sidenav container -->
   @if (layout.isHandset()) {
   <div class="mobile-nav no-print">
