feat(media-player): add minimize button to audio, video, and YouTube players for improved user control

--- a/src/app/components/media-player/audio-player/audio-player.component.html
+++ b/src/app/components/media-player/audio-player/audio-player.component.html
@@ -98,6 +98,9 @@
         <p>{{ media.current()?.artist }}</p>
       </div>
       <div class="audio-actions">
+        <button mat-icon-button matTooltip="Minimize" (click)="toggleFullscreen()">
+          <mat-icon>minimize</mat-icon>
+        </button>
         <button mat-icon-button matTooltip="Close" (click)="media.exit()">
           <mat-icon>close</mat-icon>
         </button>
