--- a/src/app/components/media-player/video-player/video-player.component.html
+++ b/src/app/components/media-player/video-player/video-player.component.html
@@ -69,6 +69,9 @@
         <button mat-icon-button matTooltip="Picture in Picture" (click)="pictureInPicture()">
           <mat-icon>picture_in_picture_alt</mat-icon>
         </button>
+        <button mat-icon-button matTooltip="Minimize" (click)="toggleFullscreen()">
+          <mat-icon>minimize</mat-icon>
+        </button>
         <button mat-icon-button matTooltip="Close" (click)="media.exit()">
           <mat-icon>close</mat-icon>
         </button>
