--- a/src/app/pages/streams/streams.component.scss
+++ b/src/app/pages/streams/streams.component.scss
@@ -107,6 +107,7 @@
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   gap: 1.5rem;
   padding: 0.5rem 0;
+  max-width: 100%;
 
   @media (max-width: 768px) {
     grid-template-columns: 1fr;
@@ -117,6 +118,7 @@
   display: flex;
   flex-direction: column;
   min-height: 500px;
+  max-width: 600px;
   overflow: hidden;
   width: 100%;
 
